@@ -55,19 +55,32 @@ sub new {
 				'index_body_el_tmpl_tmpl' => file_read("$webpage_templates/index_body_el.html")
 			   };
 
+	#replace comic webpage head template globals
+	$self->{'head_tmpl'} =~ s/<LINK_COLOR>/$link_color/g;
+	$self->{'head_tmpl'} =~ s/<VLINK_COLOR>/$vlink_color/g;
+	$self->{'head_tmpl'} =~ s/<BACKGROUND>/$background/g;
+
 	# Bless object and return it.
 	bless $self, $class;
-	
+
 	return $self;
+}
+
+sub reset_date_attributes {
+	my $self = shift;
+	$self->{'num_groups'} = undef;
+	$self->{'num_comics'} = undef;
+	$self->{'comics_on_last'} = undef;
+	$self->{'ctime'} = undef;
 }
 
 sub create_webpage {
 	my $self = shift();
 	my @rli = @_;
-	
+
 	#create a hash into the rli's
 	my %rlis = ();
-	
+
 	foreach (@rli) {
 		my $rli = $_;
 
@@ -101,8 +114,8 @@ sub create_webpage {
 	}
 	my @comics = keys(%rlis);
 	print "comics = @comics\n" if $verbose;
-	my $num_comics = @comics;
-	if ($num_comics == 0) {
+	$self->{'num_comics'} = @comics;
+	if ($self->{'num_comics'} == 0) {
 		print "\nNot creating a new webpage.\n" if $verbose;
 		return;
 	}
@@ -122,8 +135,8 @@ sub create_webpage {
 	}
 
 	my $time = time();
-	my $datestr = strftime("%b %d, %Y",gmtime($time));
-	my $ctime = ctime($time);
+	$self->{'datestr'} = strftime("%b %d, %Y",gmtime($time));
+	$self->{'ctime'} = ctime($time);
 
 	#create a sorted list of the comics
 	my @sorted_comics = sort({libdate_sort($a, $b,
@@ -133,32 +146,24 @@ sub create_webpage {
 	print "sorted comics: @sorted_comics\n" if $extra_verbose;
 
 	#determine number of groups of comics, and number of comics on each page
-	$comics_per_page = $num_comics 
+	$comics_per_page = $self->{'num_comics'}
 			unless defined($comics_per_page); 
-	my $num_groups = $num_comics / $comics_per_page;
-	$num_groups =~ s/^(\d+)\.?\d*$/$1/;
-	my $comics_on_last = $num_comics % $comics_per_page;
-	$num_groups++ if $comics_on_last > 0;
-	print "number of groups    = $num_groups\n" .
+	$self->{'num_groups'} = $self->{'num_comics'} / $comics_per_page;
+	$self->{'num_groups'} =~ s/^(\d+)\.?\d*$/$1/;
+	$self->{'comics_on_last'} = $self->{'num_comics'} % $comics_per_page;
+	$self->{'num_groups'}++ if $self->{'comics_on_last'} > 0;
+	print "number of groups    = $self->{'num_groups'}\n" .
 		"comics per page     = $comics_per_page\n" .
-			"comics on last page = $comics_on_last\n"
+			"comics on last page = $self->{'comics_on_last'}\n"
 				if $extra_verbose;
 
 	# Load templates from object.
 	my $head_tmpl = $self->{'head_tmpl'};
 	my $links_tmpl = $self->{'links_tmpl'};
 	my $tail_tmpl = $self->{'tail_tmpl'};
-	my @body_el_tmpl = @{$self->{'body_el_tmpl'}};
-	my $index_body_el_tmpl_tmpl = $self->{'index_body_el_tmpl_tmpl'};
 
 	#replace head & tail template globals
 	$head_tmpl =~ s/<PAGETITLE>/$webpage_title/g;
-	$tail_tmpl =~ s/<CTIME>/$ctime/g;
-
-	#replace comic webpage head template globals
-	$head_tmpl =~ s/<LINK_COLOR>/$link_color/g;
-	$head_tmpl =~ s/<VLINK_COLOR>/$vlink_color/g;
-	$head_tmpl =~ s/<BACKGROUND>/$background/g;
 
 	# Process the index.
 	my $index;
@@ -166,89 +171,43 @@ sub create_webpage {
 		#index head global info
 		$index = $head_tmpl;
 		$index =~ s/<NUM=FIRST>/1/g;
-		$index =~ s/<NUM=(LAST|TOTAL)>/$num_comics/g;
+		$index =~ s/<NUM=(LAST|TOTAL)>/$self->{'num_comics'}/g;
 		$index =~ s/<PAGETITLE>/$webpage_title/g;
 		$links_tmpl =~ s/<FILE=INDEX>/${webpage_index}_filename/g;
 	}
 	@_ = (\$head_tmpl);
 	push(@_,\$index) if $webpage_index;
 	foreach (@_) {
-		$$_ =~ s/<DATE>/$datestr/g;
+		$$_ =~ s/<DATE>/$self->{'datestr'}/g;
 		my @ltime = localtime($time);
 		while ($$_ =~ /<DATE FORMAT="([^\"]*)">/) {
 			my $datestr = strftime($1,@ltime); 
 			$$_ =~ s/<DATE FORMAT="([^\"]*)">/$datestr/;
 		}
 	}
-	if ($webpage_index) {
-		#replace index head globals
-		$index =~ s/<LINK_COLOR>/$index_link_color/g;
-		$index =~ s/<VLINK_COLOR>/$index_vlink_color/g;
-		$index =~ s/<BACKGROUND>/$background/g;
-	}
 
 	my $i = -1;
-	my $first_file;
-	while (++$i < $num_groups) {
-		my $group = $i + 1;
-		my $first = $i * $comics_per_page + 1;
-		my $last  = $first + $comics_per_page - 1;
-		$last = $first + $comics_on_last -1 
-			if ($group == $num_groups && $comics_on_last > 0);
+	while (++$i < $self->{'num_groups'}) {
+		my $group = $i;
+		$group++;
 		(my $filename = $webpage_filename_tmpl) =~ s/<NUM>/$group/g;
-		my ($nextfile,$prevfile) = ($webpage_filename_tmpl) x 2;
-		my $nextgroup = ($group == $num_groups)? 1 : $group +1;
-		my $prevgroup = $group -1;
-		if ($group == 1) {
-			$prevgroup = $num_groups;
-			$first_file = $filename;
-		}
-		$nextgroup = 1 if $nextfile =~ s/<NUM>/$nextgroup/g;
-		$prevfile =~ s/<NUM>/$prevgroup/g;
+		my ($page, $index_body) = 
+			generate_HTML_page($self, \%rlis, 
+							   \@sorted_comics, $i);
 
-		print "\nCreating $filename ($first to $last of $num_comics)\n" 
-			if $extra_verbose && !$webpage_on_stdout;
-
-		#replace group-global info
-		my $head = $head_tmpl;
-		my $links = "";
-		my $body ="";
-		$head =~ s/<NUM=FIRST>/$first/g;
-		$head =~ s/<NUM=LAST>/$last/g;
-		$head =~ s/<NUM=TOTAL>/$num_comics/g;
-		if ($num_groups > 1) {
-			$links = $links_tmpl;
-			$links =~ s/<FILE=PREV>/$prevfile/g;
-			$links =~ s/<FILE=NEXT>/$nextfile/g;
-			$links =~ s/<NUM>/$comics_per_page/g;
-		}
-		my $index_body_el_tmpl;
-		if ($webpage_index) {
-			$index_body_el_tmpl = $index_body_el_tmpl_tmpl;
-			$index_body_el_tmpl =~ s/<FILE=CURRENT>/$filename/g;
-			$index_body_el_tmpl =~ s/<PAGE=CURRENT>/$group/g;
-		}
-
-		my @comics_to_send = @sorted_comics[($first-1)..($last-1)];
-		my $index_body;
-		($body, $index_body) = 
-			generate_HTML_page($self, \@body_el_tmpl, \%rlis, 
-							   \@comics_to_send, $index_body_el_tmpl,
-							   $filename, $group);
 		$index .= $index_body;
 
 		unless ($webpage_on_stdout) {
 			file_write("$comics_dir/$filename",$files_mode,
-					   "$head$links$body$links$tail_tmpl");
+					   "$page");
 		} else {
-			print "$head$links$body$links$tail_tmpl";
+			print "$page";
 		}
 	}
 	if ($webpage_index && ! $webpage_on_stdout) {
 		file_write("$comics_dir/$webpage_index_filename",
 				   $files_mode, "$index$tail_tmpl");
 	}
-
 }
 
 sub create_webpage_set {
@@ -281,7 +240,7 @@ sub create_webpage_set {
 			$_ = $rli->{'status'};
 			if (! defined($_)) {
 				print STDERR "$comic has an undefined status. Skipping.\n" 
-					if $verbose;
+				if $verbose;
 				next;
 			} elsif (/[03]/) {
 				#didn't download (if a backup was tried (3), there's another
@@ -289,36 +248,37 @@ sub create_webpage_set {
 				next;
 			} elsif (/1/) {
 				print "No file for $comic. $inform_maintainer",next
-					unless defined $rli->{'file'};
+				unless defined $rli->{'file'};
 				$rli->{'stat'} = "local";
 			} elsif (/2/) {
 				print "No url for $comic. $inform_maintainer",next
-					unless defined $rli->{'url'};
+				unless defined $rli->{'url'};
 				$rli->{'file'} = $rli->{'url'};
 				$rli->{'stat'} = "remote";
 			} else {
 				print STDERR "Unsupported status ($_) for $comic. " .
-					$inform_maintainer;
+				$inform_maintainer;
 				print "Skipping $comic in webpage.\n" if $verbose;
 				next;
 			}
 			$rlis{$comic} = $rli;
 		}
 		my @comics = keys(%rlis);
-		my $num_comics = @comics;
-		if ($num_comics == 0) {
+		print "comics = @comics\n" if $verbose;
+		$self->{'num_comics'} = @comics;
+		if ($self->{'num_comics'} == 0) {
 			print "\nNot creating a new webpage.\n" if $verbose;
 			return;
 		}
 		print "\n" if $verbose;
 		unless ($webpage_on_stdout) {
-			print "Deleting old webpages (".$comics_dir."/".$subdir .
-				"/<index.html,comic*.html>).\n" if $verbose;
+			print "Deleting old webpages (".$comics_dir . 
+			"/<index.html,comic*.html>).\n" if $verbose;
 			chdir $comics_dir;
 			unlink <index.html>;
 			unlink <comic*.html>;
 		}
-	
+
 		if ($verbose) {
 			print "Creating the webpage";
 			print "s" if defined($comics_per_page);
@@ -326,152 +286,130 @@ sub create_webpage_set {
 		}
 
 		my $time = time();
-		my $datestr = strftime("%b %d, %Y",gmtime($time));
-		my $ctime = ctime($time);
+		$self->{'datestr'} = strftime("%b %d, %Y",gmtime($time));
+		$self->{'ctime'} = ctime($time);
 
 		#create a sorted list of the comics
-		my @sorted_comics =
-			sort({libdate_sort($a, $b, $rlis{$a}{'time'}, $rlis{$b}{'time'},
-							   $sort_by_date);}
-				 @comics);
+		my @sorted_comics = sort({libdate_sort($a, $b,
+										   $rlis{$a}{'time'}, $rlis{$b}{'time'},
+											   $sort_by_date);} 
+								 @comics);
 		print "sorted comics: @sorted_comics\n" if $extra_verbose;
 
-		#determine number of groups of comics, and number of comics on each page
-		$comics_per_page = $num_comics 
-			unless defined($comics_per_page); 
-		my $num_groups = $num_comics / $comics_per_page;
-		$num_groups =~ s/^(\d+)\.?\d*$/$1/;
-		my $comics_on_last = $num_comics % $comics_per_page;
-		$num_groups++ if $comics_on_last > 0;
-		print "number of groups    = $num_groups\n" .
-			"comics per page     = $comics_per_page\n" .
-			"comics on last page = $comics_on_last\n"
+		#determine number of groups of comics, and number of comics on
+		#each page
+		$comics_per_page = $self->{'num_comics'}
+		unless defined($comics_per_page); 
+		$self->{'num_groups'} = $self->{'num_comics'} / $comics_per_page;
+		$self->{'num_groups'} =~ s/^(\d+)\.?\d*$/$1/;
+		$self->{'comics_on_last'} = $self->{'num_comics'} % $comics_per_page;
+		$self->{'num_groups'}++ if $self->{'comics_on_last'} > 0;
+		print "number of groups    = $self->{'num_groups'}\n" .
+		"comics per page     = $comics_per_page\n" .
+			"comics on last page = $self->{'comics_on_last'}\n"
 				if $extra_verbose;
 
 		# Load templates from object.
 		my $head_tmpl = $self->{'head_tmpl'};
 		my $links_tmpl = $self->{'links_tmpl'};
 		my $tail_tmpl = $self->{'tail_tmpl'};
-		my @body_el_tmpl = @{$self->{'body_el_tmpl'}};
-		my $index_body_el_tmpl_tmpl = $self->{'index_body_el_tmpl_tmpl'};
 
 		#replace head & tail template globals
 		$head_tmpl =~ s/<PAGETITLE>/$webpage_title/g;
-		$tail_tmpl =~ s/<CTIME>/$ctime/g;
-
-		#replace comic webpage head template globals
-		$head_tmpl =~ s/<LINK_COLOR>/$link_color/g;
-		$head_tmpl =~ s/<VLINK_COLOR>/$vlink_color/g;
-		$head_tmpl =~ s/<BACKGROUND>/$background/g;
 
 		# Process the index.
 		my $index;
-		my $wepage_title = "$comic_title Archives";
 		if ($webpage_index) {
 			#index head global info
 			$index = $head_tmpl;
 			$index =~ s/<NUM=FIRST>/1/g;
-			$index =~ s/<NUM=(LAST|TOTAL)>/$num_comics/g;
+			$index =~ s/<NUM=(LAST|TOTAL)>/$self->{'num_comics'}/g;
 			$index =~ s/<PAGETITLE>/$webpage_title/g;
-			$links_tmpl =~ s/<FILE=INDEX>/$webpage_index_filename/g;
+			$links_tmpl =~ s/<FILE=INDEX>/${webpage_index}_filename/g;
 		}
-
 		@_ = (\$head_tmpl);
 		push(@_,\$index) if $webpage_index;
 		foreach (@_) {
-			$$_ =~ s/<DATE>/$datestr/g;
+			$$_ =~ s/<DATE>/$self->{'datestr'}/g;
 			my @ltime = localtime($time);
 			while ($$_ =~ /<DATE FORMAT="([^\"]*)">/) {
 				my $datestr = strftime($1,@ltime); 
 				$$_ =~ s/<DATE FORMAT="([^\"]*)">/$datestr/;
 			}
 		}
-		if ($webpage_index) {
-			#replace index head globals
-			$index =~ s/<LINK_COLOR>/$index_link_color/g;
-			$index =~ s/<VLINK_COLOR>/$index_vlink_color/g;
-			$index =~ s/<BACKGROUND>/$background/g;
-		}
-
+		
 		my $i = -1;
-		my $first_file;
-
-		while (++$i < $num_groups) {
-			my $group = $i + 1;
-			my $first = $i * $comics_per_page + 1;
-			my $last  = $first + $comics_per_page - 1;
-			$last = $first + $comics_on_last -1 
-				if ($group == $num_groups && $comics_on_last > 0);
+		while (++$i < $self->{'num_groups'}) {
+			my $group = $i;
+			$group++;
 			(my $filename = $webpage_filename_tmpl) =~ s/<NUM>/$group/g;
-			my ($nextfile,$prevfile) = ($webpage_filename_tmpl) x 2;
-			my $nextgroup = ($group == $num_groups)? 1 : $group +1;
-			my $prevgroup = $group -1;
-			if ($group == 1) {
-				$prevgroup = $num_groups;
-				$first_file = $filename;
-			}
-			$nextgroup = 1 if $nextfile =~ s/<NUM>/$nextgroup/g;
-			$prevfile =~ s/<NUM>/$prevgroup/g;
+			my ($page, $index_body) = 
+			generate_HTML_page($self, \%rlis, 
+							   \@sorted_comics, $i);
 
-			print "\nCreating $filename ($first to $last of $num_comics)\n" 
-				if $extra_verbose && !$webpage_on_stdout;
-
-			#replace group-global info
-			my $head = $head_tmpl;
-			my $links = "";
-			my $body ="";
-			$head =~ s/<NUM=FIRST>/$first/g;
-			$head =~ s/<NUM=LAST>/$last/g;
-			$head =~ s/<NUM=TOTAL>/$num_comics/g;
-			if ($num_groups > 1) {
-				$links = $links_tmpl;
-				$links =~ s/<FILE=PREV>/$prevfile/g;
-				$links =~ s/<FILE=NEXT>/$nextfile/g;
-				$links =~ s/<NUM>/$comics_per_page/g;
-			}
-			my $index_body_el_tmpl;
-			if ($webpage_index) {
-				$index_body_el_tmpl = $index_body_el_tmpl_tmpl;
-				$index_body_el_tmpl =~ s/<FILE=CURRENT>/$filename/g;
-				$index_body_el_tmpl =~ s/<PAGE=CURRENT>/$group/g;
-			}
-
-			my @comics_to_send = @sorted_comics[($first-1)..($last-1)];
-			my $index_body;
-			($body, $index_body) = 
-				generate_HTML_page($self, \@body_el_tmpl, \%rlis, 
-								   \@comics_to_send, $index_body_el_tmpl,
-								   $filename, $group);
 			$index .= $index_body;
 
 			unless ($webpage_on_stdout) {
-				print "Creating file in $comics_dir/$subdir/$filename\n"
-						if $verbose;
 				file_write("$comics_dir/$subdir/$filename",$files_mode,
-						   "$head$links$body$links$tail_tmpl");
+						   "$page");
 			} else {
-				print "$head$links$body$links$tail_tmpl";
+				print "$page";
 			}
-			
 		}
 		if ($webpage_index && ! $webpage_on_stdout) {
-			file_write("$comics_dir/$subdir/" .
-					   "$webpage_index_filename",
+			file_write("$comics_dir/$subdir/$webpage_index_filename",
 					   $files_mode, "$index$tail_tmpl");
 		}
 	}
 }
 
 sub generate_HTML_page {
-	my ($self, $a, $b, $c, $d, $e, $f) = @_;
-	my @body_el_tmpl = @$a;
+	my ($self, $b, $c, $i) = @_;
+	my @body_el_tmpl = @{$self->{'body_el_tmpl'}};
 	my %rlis = %$b;
-	my @input_comics = @$c;
-	my $index_body_el_tmpl = $d;
-	my $filename = $e;
-	my $group = $f;
-	my ($body,$index) = ("","");
-	foreach my $comic (@input_comics) {
+	my @sorted_comics = @$c;
+
+	my $group = $i + 1;
+	my $first = $i * $comics_per_page + 1;
+	my $last  = $first + $comics_per_page - 1;
+	$last = $first + $self->{'comics_on_last'} -1 
+		if ($group == $self->{'num_groups'} && $self->{'comics_on_last'} > 0);
+	(my $filename = $webpage_filename_tmpl) =~ s/<NUM>/$group/g;
+	my ($nextfile,$prevfile) = ($webpage_filename_tmpl) x 2;
+	my $nextgroup = ($group == $self->{'num_groups'})? 1 : $group +1;
+	my $prevgroup = $group -1;
+	if ($group == 1) {
+		$prevgroup = $self->{'num_groups'};
+	}
+	$nextgroup = 1 if $nextfile =~ s/<NUM>/$nextgroup/g;
+	$prevfile =~ s/<NUM>/$prevgroup/g;
+
+	print "\nCreating $filename ($first to $last of $self->{'num_comics'})\n" 
+		if $extra_verbose && !$webpage_on_stdout;
+
+	#replace group-global info
+	my $head = $self->{'head_tmpl'};
+	my $links = "";
+	my $body ="";
+	my $index = "";
+	$head =~ s/<NUM=FIRST>/$first/g;
+	$head =~ s/<NUM=LAST>/$last/g;
+	$head =~ s/<NUM=TOTAL>/$self->{'num_comics'}/g;
+	if ($self->{'num_groups'} > 1) {
+		$links = $self->{'links_tmpl'};
+		$links =~ s/<FILE=PREV>/$prevfile/g;
+		$links =~ s/<FILE=NEXT>/$nextfile/g;
+		$links =~ s/<NUM>/$comics_per_page/g;
+	}
+
+	my $index_body_el_tmpl;
+	if ($webpage_index) {
+		$index_body_el_tmpl = $self->{'index_body_el_tmpl_tmpl'};
+		$index_body_el_tmpl =~ s/<FILE=CURRENT>/$filename/g;
+		$index_body_el_tmpl =~ s/<PAGE=CURRENT>/$group/g;
+	}
+
+	foreach my $comic (@sorted_comics[($first-1)..($last-1)]) {
 		my $rli = $rlis{$comic};
 		my @gmtime = gmtime($rli->{'time'});
 		my $comic_id = $rli->{'name'};
@@ -565,7 +503,19 @@ sub generate_HTML_page {
 
 		print "\n" if $extra_verbose;
 	}
-	return($body, $index);
+
+	# Create the "$page" out of elements and fill common variables.
+	my $page = "$head$links$body$links$self->{'tail_tmpl'}";
+	$page =~ s/<PAGETITLE>/$webpage_title/g;
+	$page =~ s/<CTIME>/$self->{'ctime'}/g;
+	$page =~ s/<DATE>/$self->{'datestr'}/g;
+
+	# Do the same for $index.
+	$index =~ s/<PAGETITLE>/$webpage_title/g;
+	$index =~ s/<CTIME>/$self->{'ctime'}/g;
+	$index =~ s/<DATE>/$self->{'datestr'}/g;
+
+	return("$page", $index);
 }
 
 1;
